Fix map view on mobile. Better collapse of refine search

--- a/app/assets/stylesheets/dta/institutions.scss
+++ b/app/assets/stylesheets/dta/institutions.scss
@@ -506,6 +506,9 @@ $viewer_bg: #111111 !default;
 
     #sidebar {
       clear: both;
+      float: unset !important;
+      margin-bottom: -23px;
+      margin-top: 5px;
     }
   }
 
